base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angelpay
  labels:
    app: angelpay
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: angelpay
